# NGU_Firefly

./: .env  README.md  app_config.toml  pyproject.toml  run.bat  run.sh
app/: app_config.py  compare.py  encode.py  encoder.py  environment.py  file_utils.py  hashing_service.py  job_composer.py  job_validator.py  json_serializer.py  main.py  metadata_extractor.py  model.py  rename.py  select_lower_size.py  video_duplicates.py  vmaf_comparator.py
app/config/: app_config.py  config_validator.py  lock_config.py
app/extractor/: environment_extractor.py  ffmpeg_metadata_extractor.py  video_attributes_extractor.py
app/locking/: __init__.py  file_lock.py  lock_manager.py  lock_mode.py  lock_type.py
app/migrations/: __init__.py  dict_utils.py  job_data_migrator.py  migration_exception.py  migration_manager.py
app/migrations/versions/: v1_to_v3_migrator.py
app/model/: encoder_data_json.py  encoder_job_context.py  encoding_stage.py  environment.py  execution_data.py  ffmpeg_metadata.py  file_attributes.py  iteration.py  source_video.py  video_embedded_metadata.py
app/model/json/: encoder_data.py  encoder_data_json.py  encoder_settings.py  encoding_stage.py  file_attributes.py  iteration.py  job_data.py  source_video.py  video_attributes.py  video_embedded_metadata.py
app/os_resources/: exceptions.py  os_resources_utils.py
app/prioritization/: __init__.py  job_prioritizer.py  priority_rule.py
app/prioritization/rules/: low_bitrate_rule.py  resolution_rule.py
tests/: conftest.py  job_composer_tests.py
