[project]
name = "NGU_Firefly"
version = "2.3.1"
description = ""
authors = [
    {name = "Mihail Komarov",email = "michaelkomarov03@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.14"
dependencies = [
    "pydantic (==2.12.5)",
    "python-dotenv (==1.2.1)",
    "numpy (==2.4.0)",
    "py-cpuinfo (==9.0.0)",
    "filelock (==3.20.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
